# reliable-llm-monitoring

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROBE_ABLATION_PLAN.md  PROBE_ABLATION_RESULTS.md  adaptive_rate_options.md  jensens_inequality_argument.md  lint.sh  paper_scratch.md  pyproject.toml  test_modal_smoke.py
experiments/: activation_registry.py  analyse_batch_size_sweep.py  analyse_cascade.py  analyse_grouped_cascade.py  analyse_stratified_cascade.py  analyse_uncertainty_stratified_cascade.py  baseline_registry.py  batch_analysis.py  calibrate_scores.py  cascade_comparison.py  cascade_comparison_sweep.py  cascade_plotting.py  cascade_utils.py  clearml_logger.py  clearml_serialization.py  comparison_plotting.py  compute_scores.py  config.py  delegation_value_probe.py  diagnose_cascade.py  dv_binary_vs_continuous.py  dv_cascade_comparison.py  dv_cascade_comparison_sweep.py  dv_ltt_cascade.py  dv_sgt_cascade.py  fixed_cascade.py  group_analysis.py  guaranteed_budget.py  guaranteed_risk_cascade.py  guaranteed_risk_cascade_plotting.py  ltt_calibration_size_sweep.py  ltt_coverage_validation.py  mixed_dataset.py  plot_utils.py  precompute_baselines.py  probe_ablation.py  probe_ablation_analysis.py  probe_ablation_sweep.py  probe_analysis.py  probe_difficulty_check.py  (+14 more)
experiments/configs/: batch_analysis.yaml  cascade_comparison.yaml  cascade_comparison_percentile.yaml  delegation_value_probe.yaml  delegation_value_probe_continuous.yaml  dv_cascade_comparison.yaml  dv_cascade_comparison_llama1b.yaml  dv_ltt_cascade.yaml  group_analysis.yaml  guaranteed_budget.yaml  guaranteed_risk_cascade.yaml  probe_ablation.yaml  probe_ablation_accuracy_guarantee.yaml  probe_ablation_batch_analysis.yaml  probe_ablation_group_analysis.yaml  probe_ablation_probe_analysis.yaml  probe_analysis.yaml  probe_eval.yaml  ranking_comparison.yaml  ranking_comparison_llama8b.yaml  sgt_cascade.yaml  sgt_cascade_best_alpha.yaml  sgt_cascade_best_threshold.yaml  sgt_cascade_budget_target.yaml  sgt_cascade_mixed.yaml
experiments/configs/dv_cascade/: dv_cascade_comparison_binary_strong_acc.yaml  dv_cascade_comparison_binary_weak_acc.yaml  dv_cascade_comparison_continuous_strong_acc.yaml  dv_cascade_comparison_continuous_strong_auroc.yaml  dv_cascade_comparison_continuous_weak_acc.yaml  dv_cascade_comparison_continuous_weak_auroc.yaml
experiments/configs/dv_cascade_70b/: binary_strong_acc.yaml  binary_weak_acc.yaml  continuous_strong_acc.yaml  continuous_strong_auroc.yaml  continuous_weak_acc.yaml  (+1 more)
experiments/notes/: dv_ltt_cascade_slides.md
explore/: analyse_uncertainty.ipynb  cascade.py  demo_probes.ipynb  ltt_utils.py  prediction_case_studies.ipynb  probes.py  test_cascade.py
reliable_monitoring/: __init__.py  bounds.py  cascade.py  cascade_test.py  dataset.py  dataset_reduction_test.py  dataset_test.py  dv_probes.py  dv_probes_test.py  graphical_test_graphs.py  graphical_test_graphs_test.py  guaranteed_budget_results_test.py  learn_then_test.py  learn_then_test_test.py  ltt_utils.py  modal_activations.py  modal_baseline.py  probes.py  probes_test.py  reductions.py  reductions_test.py  risks.py  selection_strategies_test.py  test_cascade.py  test_probes.py
writeup/: biblio.bib  reliable_latent_monitoring.tex
(+5 files in other folders)
