[project]
name = "reliable-llm-monitoring"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "models-under-pressure",
    "python-dotenv",
    "tqdm>=4.67.1",
    "pytest>=8.0.0",
]

[tool.uv.sources.models-under-pressure]
path = "/Users/ep/Documents/research/vrcp_proj/models-under-pressure"
editable = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

# Enable common, sane rule sets
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line length handled by formatter
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Optional: per-file ignores (useful in research repos)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["B"]

