[project]
name = "reliable-llm-monitoring"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "models-under-pressure",
    "python-dotenv",
    "tqdm>=4.67.1",
    "pytest>=8.0.0",
    "nbformat>=5.10.4",
    "clearml>=1.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "ty",
]
modal = [
    "modal>=0.73.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reliable_monitoring"]

# On macOS we don't need GPU-only packages that mup pulls in.
# override-dependencies replaces the transitive requirement entirely,
# so the environment marker makes them linux-only.
[tool.uv]
override-dependencies = [
    "bitsandbytes>=0.45.0 ; sys_platform == 'linux'",
    "deepspeed>=0.10.0 ; sys_platform == 'linux'",
]

[tool.uv.sources.models-under-pressure]
git = "ssh://git@github.com/EdoardoPona/models-under-pressure.git"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

# Enable common, sane rule sets
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line length handled by formatter
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "ty>=0.0.12",
]

# Optional: per-file ignores (useful in research repos)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["B"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that may access external services, load models, or run inference",
]

